fix(STN-254): search bar width on mobile and tablet

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_masthead.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_masthead.scss
@@ -20,8 +20,16 @@
     display: block;
     padding-top: hb-calculate-rems(11px);
     padding-bottom: hb-calculate-rems(28px);
-    max-width: $hb-input-max-width;
     z-index: $hb-z-index-search;
+    width: 100%;
+
+    @include grid-media-min('sm') {
+      width: 60%;
+    }
+
+    @include grid-media-min('lg') {
+      max-width: $hb-input-max-width;
+    }
   }
 
   .su-main-nav {
